@@ -1,4 +1,8 @@
-﻿drkns 26.04.2016 22:50:38 +0200 - build 4641
+﻿drkns 28.04.2016 10:40:27 +0200 - build 4642
+
+1. Уточнение 4631.
+
+drkns 26.04.2016 22:50:38 +0200 - build 4641
 
 1. Уточнение 4635: показываем "remaining:" при копировании одного файла и обновляем его с той же частотой, что и скорость.
 
